# little-chemistry

./: Cargo.toml  README.md  publish-github.sh  publish.sh
docs/: index.html  little-chemistry.wasm
public/: little-chemistry.wasm
src/: gui.rs  main.rs  recipe.rs  recipes.toml  term.rs
