[package]
name = "little-chemistry"
version = "1.0.0"
edition = "2021"

license = "MIT"
description = "A CLI game where you combine things to create new ones."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
toml = "0.7.3"
